# bubli-frontend

./: .editorconfig  .env.example  .gitignore  Dockerfile  GIT_CONVENTION.md  README.md  components.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.claude/skills/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.storybook/: main.ts  preview.ts
docs/: Bubli_1차_컴포넌트_추출_완료점검_2026-06-26.md  Bubli_Storybook_v20_Component_Triage_2026-06-26.md  Bubli_Storybook_v20_QA_2026-06-26.md  Bubli_Storybook_v20_Visual_QA_Result_2026-06-26.md  Bubli_UI_Kit_Visual_QA_2026-06-26.md  Bubli_UI_Kit_이식계획_2026-06-26.md  Bubli_UI_Kit_자동이식_결과보고_2026-06-26.md  Bubli_Visual_Target_Guide_2026-06-26.md  Bubli_백엔드_PM_API_계약_확인요청_2026-06-22.md  Bubli_타우리_구현스펙_로컬자료검색_2026-06-26.md  Bubli_프론트_AI작업자_Git_작업규칙_2026-06-22.md  Bubli_프론트_GitHub_이슈_초안_2026-06-22.md  Bubli_프론트_현재작업_및_작업순서_2026-06-22.md  Bubli_프론트엔드_개발_가이드_2026-06-22.md  Bubli_프론트엔드_개발계획_AtoZ_2026-06-26.md  Bubli_프론트엔드_바이브코딩_가이드.csv  Bubli_프론트타우리_벤치마킹_구현계획_2026-06-26.md  CODEX_WORKING_CONTEXT.md  PROJECT_STRUCTURE.md  PUBLIC_SITE_요구사항_2026-06-29.md  Storybook_정합화_2026-06-26.md  UI_Reference_Library.md  api-screen-wiring-audit-2026-07-01.md  auth-api-bridge-2026-07-01.md  calendar-requirements-2026-07-01.md  communication-requirements-2026-07-01.md  component-inventory.csv  dashboard-card-candidates-2026-07-01.md  macos-local-tauri-qa-2026-07-02.md  member-app-api-connection-map-2026-06-30.md  member-app-screen-responsibility-2026-06-30.md  mock-data-removal-and-api-wiring-2026-07-01.md  mock-hardcoding-cleanup-2026-07-02.md  realtime-websocket-cleanup-note-2026-06-30.md  resources-requirements-2026-07-01.md  settings-requirements-2026-07-01.md  sprint3-websocket-event-contract-2026-06-30.md  widget-api-local-cache-flow-2026-06-30.md  work-board-requirements-2026-07-01.md  기능_API연결_명세_2026-07-01.csv  (+2 more)
implementation-checklist/: 회원앱_캘린더_인터랙션_PRD_2026-06-30.md
scripts/: check-design-tokens.mjs  check-frontend-smoke.mjs  check-i18n-messages.mjs  check-product-rules.mjs  check-tauri-boundaries.mjs  dev-widget-real-backend.mjs  visual-qa.mjs
src/: README.md
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activity.rs  lib.rs  local_db.rs  local_files.rs  main.rs  widget_usage.rs
(+707 files in other folders)
