[package]
name = "bubli"
version = "0.1.0"
description = "Bubli desktop app"
authors = ["Project Hae Maeil"]
edition = "2021"

[lib]
name = "bubli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
notify = "6"
# On-device store for folder index, widget usage rollups, activity focus, sync outbox.
# "bundled" compiles SQLite in-tree so no system sqlite is required.
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
